--- a/.env
+++ b/.env
@@ -12,5 +12,5 @@ SMPT_PORT="smtp.gmail.com"
 SMPT_SERVICE="gmail"
 SMPT_MAIL="shuptomurshid6@gmail.com"
 SMPT_PASSWORD="yagsswvvstyomhpo"
-FRONTEND_URL=https://retail-master-virid.vercel.app
+FRONTEND_URL=https://retail-master-2.vercel.app
 # FRONTEND_URL=http://localhost:3000
